# data_quality_control

./: .gitignore  LICENSE  README.md  __init__.py  conftest.py  environment.yml  pyproject.toml  setup.cfg  setup.py
data_quality_control.egg-info/: PKG-INFO
fun/: DataQualityFlags.py  __init__.py  pythonAssist.py
src/: run_qc.py
tests/: test_data_quality_flags.py
