[bumpversion]
current_version = 0.5.10
commit = True
tag = True

[metadata]
description-file = README.md
name         = data_quality_control
version      = 0.1.0
author       = Ashim Giyanani
description  = Python code to perform data quality control on wind energy data, especially meteorological data
keywords     = quality_control, wind
long_description = file: README.md
long_description_content_type = text/markdown
url = 'git@gitlab.cc-asp.fraunhofer.de:iwes_wind/PythonProjectTemplate.git'

classifiers =
    python3

[options]
zip_safe = True
include_package_data = True
package_dir =
packages = find:
python_requires = 
    >=3.9

; [options.extras_require]
; doc =
;     pytest  # running tests
;     sphinx  # building documentation
;     sphinx_rtd_theme  # theme for documentation


; [bumpversion:file:setup.py]
; search = version='{current_version}'
; replace = version='{new_version}'


